[package]
name = "nft-minter"
version = "0.1.0"
description = "Metaplex Core NFT Minter with Dynamic Metadata Updates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
mpl-core = { version = "0.10.1" }